--- a/config/locales/plan.pt-BR.yml
+++ b/config/locales/plan.pt-BR.yml
@@ -14,3 +14,6 @@ pt-BR:
         limit_monthly_messages: Limite de mensagens por mês
         extra_message_price: Valor por mensagem além do limite
         extra_chat_price: Valor por conversa além do limite
+  plans:
+    new:
+      submit: Cadastrar
