Corrige botao duplicado, e adiciona testes com email e senha vazios. Co-authored-by: Lucas Penhalver <penhalver.lucas@gmail.com>

--- a/config/locales/pt-BR/models/user.yml
+++ b/config/locales/pt-BR/models/user.yml
@@ -26,4 +26,7 @@ pt-BR:
     registrations:
       new:
         sign_up: Registrar-se
+    shared:
+      links:
+        sign_up: Registrar Usuário
 
