Adicionar edição de plano com histórico de preço
Co-authored-by: FabioOya <fabio_iwao@hotmail.com>

--- a/config/locales/pt-BR/models/plan.yml
+++ b/config/locales/pt-BR/models/plan.yml
@@ -15,3 +15,18 @@ pt-BR:
 
       plan:
         <<: *attr_defaults
+        name: Nome
+        price: Valor mensal
+        platforms: Plataformas
+        limit_daily_chat: Limite de conversas por dia
+        limit_monthly_chat: Limite de conversas por mês
+        limit_daily_messages: Limite de mensagens por dia
+        limit_monthly_messages: Limite de mensagens por mês
+        extra_message_price: Valor por mensagem além do limite
+        extra_chat_price: Valor por conversa além do limite
+
+  plans:
+    new:
+      submit: Cadastrar
+    edit:
+      send: Enviar
