registra novo pedido
Co-authored-by: FabioOya <fabio_iwao@hotmail.com>

--- a/config/locales/pt-BR/controlers/api/v1/api_controller.yml
+++ b/config/locales/pt-BR/controlers/api/v1/api_controller.yml
@@ -5,3 +5,5 @@ pt-BR:
       v1:
         errors:
           not_found: '%{model} não encontrado.'
+          token: 'Token não encontrado'
+          plan: 'Plano não encontrado'
