--- a/config/locales/pt-BR/controllers.yml
+++ b/config/locales/pt-BR/controllers.yml
@@ -2,3 +2,6 @@
 pt-BR:
   flash:
     updated: Atualizado com sucesso!
+    order_cancellation_request:
+      approved: Solicitação de cancelamento aprovada! 
+      rejected: Solicitação de cancelamento rejeitada!
