Renomear Order para Purchase
Co-authored-by: gabrielsugai <gabrielsugai@gmail.com>

--- a/config/locales/pt-BR/controllers.yml
+++ b/config/locales/pt-BR/controllers.yml
@@ -2,6 +2,6 @@
 pt-BR:
   flash:
     updated: Atualizado com sucesso!
-    order_cancellation_request:
+    purchase_cancellation:
       approved: Solicitação de cancelamento aprovada! 
       rejected: Solicitação de cancelamento rejeitada!
