--- a/config/locales/pt-BR/controlers/api/v1/api_controller.yml
+++ b/config/locales/pt-BR/controlers/api/v1/api_controller.yml
@@ -5,5 +5,11 @@ pt-BR:
       v1:
         errors:
           not_found: '%{model} não encontrado.'
-          token: 'Token não encontrado'
-          plan: 'Plano não encontrado'
+  api:
+    v1:
+      orders:
+        create:
+          error: '%{attribute} não encontrado'
+          token: Token
+          plan: Plano
+
