Resolvido todos commits
Co-authored-by: Guilherme Sampaio <guifs100@gmail.com>

--- a/config/locales/pt-BR/controlers/api/v1/api_controller.yml
+++ b/config/locales/pt-BR/controlers/api/v1/api_controller.yml
@@ -10,6 +10,8 @@ pt-BR:
       orders:
         create:
           error: '%{attribute} não encontrado'
+          errors: 'Token e plano não encontrados'
           token: Token
           plan: Plano
+          order: Pedido
 
