--- a/config/locales/pt-BR/controllers/api/v1/errors.yml
+++ b/config/locales/pt-BR/controllers/api/v1/errors.yml
@@ -3,6 +3,6 @@ pt-BR:
   api:
     v1:
       errors:
-        not_found: '%{model} não encontrad@.'
+        not_found: '%{model} não encontrada(o).'
         open_cancellation_request: Esta compra já possui uma solicitação de cancelamento em aberto.
 
