Finalizando testes WIP
Co-authored-by: Guilherme Feitosa Sampaio <guifs100@gmail.com>

--- a/config/locales/pt-BR/controlers/api/v1/api_controller.yml
+++ b/config/locales/pt-BR/controlers/api/v1/api_controller.yml
@@ -9,9 +9,10 @@ pt-BR:
     v1:
       orders:
         create:
-          error: '%{attribute} não encontrado'
+          error: '%{attribute} não encontrado.'
           errors: 'Token e plano não encontrados'
           token: Token
           plan: Plano
           order: Pedido
+  not_found: '%{model} não encontrado.'
 
