Adicionar validações de start_time e end_time . Co-authored-by: gabrielsugai <gabrielsugai@gmail.com>

--- a/config/locales/pt-BR/models/bot.yml
+++ b/config/locales/pt-BR/models/bot.yml
@@ -4,6 +4,7 @@ pt-BR:
     models:
       bot:
         one: Bot
+        other: Bots
 
     attributes:
       attr_defaults: &attr_defaults
@@ -11,9 +12,11 @@ pt-BR:
         created_at: Criado
         updated_at: Alterado
         deleted_at: Excluído
-        token: Token
+
       bot:
         <<: *attr_defaults
+        token: Token
+
       bot/status:
         active: Ativo
         canceled: Cancelado
