Concluido sistema recebe um novo pedido
Co-authored-by: Guilherme Feitosa Sampaio <guifs100@gmail.com>

--- a/config/locales/pt-BR/controlers/api/v1/api_controller.yml
+++ b/config/locales/pt-BR/controlers/api/v1/api_controller.yml
@@ -10,7 +10,7 @@ pt-BR:
       orders:
         create:
           error: '%{attribute} não encontrado.'
-          errors: 'Token e plano não encontrados'
+          errors: 'Token e Plano não encontrados.'
           token: Token
           plan: Plano
           order: Pedido
