Criar index e show de purchases
Co-authored-by: gabrielsugai <gabrielsugai@gmail.com>

--- a/config/locales/pt-BR/models/plan.yml
+++ b/config/locales/pt-BR/models/plan.yml
@@ -17,6 +17,7 @@ pt-BR:
         <<: *attr_defaults
         name: Nome
         price: Valor mensal
+        current_price: Valor atual
         platforms: Plataformas
         limit_daily_chat: Limite de conversas por dia
         limit_monthly_chat: Limite de conversas por mês
