--- a/config/locales/pt-BR/models/purchase.yml
+++ b/config/locales/pt-BR/models/purchase.yml
@@ -16,3 +16,8 @@ pt-BR:
       purchase:
         <<: *attr_defaults
         token: Token
+        status: Status
+
+      purchase/status:
+        active: Ativo
+        inactive: Inativo
