Inicio da estilização.
Co-authored-by: gabrielsugai <gabrielsugai@gmail.com>

--- a/config/locales/pt-BR/models/purchase_cancellations.yml
+++ b/config/locales/pt-BR/models/purchase_cancellations.yml
@@ -5,6 +5,7 @@ pt-BR:
       purchase_cancellation:
         one: Solicitação de cancelamento
         other: Solicitações de cancelamento
+        slug: Cancelamentos
 
     attributes:
       attr_defaults: &attr_defaults
