Bloqueia company depois de 2 bots bloqueados
Co-authored-by: Guilherme Feitosa Sampaio <guifs100@gmail.com>

--- a/config/locales/pt-BR/models/bot.yml
+++ b/config/locales/pt-BR/models/bot.yml
@@ -19,5 +19,6 @@ pt-BR:
 
       bot/status:
         active: Ativo
+        awaiting: Aguardando
         canceled: Cancelado
         blocked: Bloqueado
