--- a/config/locales/pt-BR/models/purchase.yml
+++ b/config/locales/pt-BR/models/purchase.yml
@@ -16,3 +16,6 @@ pt-BR:
       purchase:
         <<: *attr_defaults
         token: Token
+        plan: Plano
+        company: Empresa
+        price: Preço
