Adicionar erro de compra para empresas bloqueadas e documentação da do endpoint.

--- a/config/locales/pt-BR/controllers/api/v1.yml
+++ b/config/locales/pt-BR/controllers/api/v1.yml
@@ -9,8 +9,5 @@ pt-BR:
 
       purchases:
         create:
-          error: '%{attribute} não encontrado.'
-          errors: 'Token e Plano não encontrados.'
-          token: Token
-          plan: Plano
-          purchase: Compra
+          bad_request: Parametros invalidos, verifique o corpo da requisição.
+          blocked_company: Empresa bloqueada de fazer novas compras.
