Mover o bloquie de criação de compra para dentro do model.

--- a/config/locales/pt-BR/models/purchase.yml
+++ b/config/locales/pt-BR/models/purchase.yml
@@ -17,7 +17,15 @@ pt-BR:
         <<: *attr_defaults
         token: Token
         status: Status
+        company: Empresa
 
       purchase/status:
         active: Ativo
         inactive: Inativo
+
+    errors:
+      models:
+        purchase:
+          attributes:
+            company:
+              blocked: bloqueada de fazer novas compras.
