Possibilita planos sem cobrança extra
Co-authored-by: librity <luis.geniole@gmail.com>

--- a/config/locales/pt-BR/models/plan.yml
+++ b/config/locales/pt-BR/models/plan.yml
@@ -27,6 +27,7 @@ pt-BR:
         extra_chat_price: Valor por conversa além do limite
         status: Status
         current_price: Valor atual
+        blocked_on_limit: Bloquear ao atingir limite
 
       plan/status:
         active: Ativo
